tests/A2/reject/sameVarName.ul
void main(){
    int x;
    string x;
}